--- a/styles/style.css
+++ b/styles/style.css
@@ -50,7 +50,7 @@ background: linear-gradient(90deg, rgba(36,14,0,0.7875525210084033) 0%, rgba(80,
 .card h2 {
   margin: 0;
   font-size: 1.1em;
-  color: #ffffff;
+  color: #d1a9a9;
   margin-bottom: 13px;
 }
 
